gen and api refactoring
